* Fix crash when loading a cutscene from a book event.
* Fix infinite transformation loop when dying in a transformed state that was activated by a passive power.
* Fix bug where the player wasn't returned to their normal state after dying in a transformed state.

Game updates:

* New graphics for HP and MP status bars
* Reworked art for the Cleave power
* Cleave power radius reduced to closer match its artwork
* Reduced the strength and radius of Rakk's freeze attack
* Fixed the Goblin Thief being able to steal potions from a Summoned Zombie
* Reduced the hitbox for spike traps
* Greatly reduced the damage for spike traps in the Underworld. In exchange, the traps now inflict bleeding.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* German (de) update (Wuzzy2)
* Basque (eu) by aitzkora
* Scottish Gaelic (gd) update (GunChleoc)
* Hungarian (hu) update (litoll)
* Norwegian (nb) update (Elias Nykrem)
* Polish (pl) update (Błażej Pęksyk)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Igor Polyakov)
* Slovak (sk) update (MiroslavR)
* Vietnamese (vi) update (Nguyễn Gia Phong)
* Chinese (zh) update (dumaosen, sakura09123)



Flare v1.11 (http://flarerpg.org/index.php/2019/07/27/flare-1-11/)

Engine features:

* Players now have their own private stash in addition to the shared stash.
* Expanded the 'no_stash' Item variable to account for having multiple stashes.

Engine fixes:

* Fix bug where items could be dragged from the vendor window and dropped in the opposite vendor tab.
* Fix bug that caused item max_quantity to be reset when attempting to append an item definition.
* Fix bug where Powers with 'replace_by_effect' would still use properties from the parent power, such as animation state.

Game updates:

* Items that couldn't be stashed in the last update can now be put in the private stash.
* Salted Field: moved chest to the south end of the map to prevent easy farming.

Translation updates:

* Belarusian (be) update (Zmicer Turok)